--- a/skylar75.hw5.css
+++ b/skylar75.hw5.css
@@ -1,10 +1,7 @@
 *{padding:0px;
-margin:0px;}
-p{width:200px;
-padding:20px;
-border:10px;}
-header{position: sticky;border-top: 100px;border-right: 100px;}
-main{width:80px;height:100px;}
+margin:0px; box-sizing: border-box;}
+<h1>{border-style: solid;border-color: black;position: relative;left: 0px;}
+<p>{width: 80px; text-align: center;}
 
 
 
