--- a/skylar75.hw5.css
+++ b/skylar75.hw5.css
@@ -1,7 +1,8 @@
 *{padding:0px;
 margin:0px; box-sizing: border-box;}
-<h1>{border-style: solid;border-color: black;position: relative;left: 0px;}
+<h1>{border-style: solid;border-color: black;position: relative;left: 10px;}
 <p>{width: 80px; text-align: center;}
+<footer>
 
 
 
