--- a/Homework/skylar75.hw6.css
+++ b/Homework/skylar75.hw6.css
@@ -1,3 +1,41 @@
-*{padding: 25px 50px 75px 100px;
-  margin
+*{padding:0px;
+  margin: 0px;
+  box-sizing: content-box;
 }
+/* flex item */
+.grid-container {
+  display: grid;
+  grid-template-rows: repeat(3, 150px);
+  grid-template-columns: repeat(4, 150px);
+  gap: 1em;
+  }
+  .grid-item {
+  width: 150px;
+  height: 150px;
+  display: flex; /* tiny flexbox to center text */
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  color: var(--clr-light);
+  text-shadow: 1px 1px 1px #6b6b6b;
+  font-weight: 700;
+  font-size: 2rem;
+  }
+  .item-1 {
+  background-color: var(--clr-pink);
+  }
+  .item-2 {
+  background-color: var(--clr-green);
+  }
+  .item-3 {
+  background-color: var(--clr-yellow);
+  }
+  .item-4 {
+  background-color: var(--clr-sky);
+  }
+  .item-5 {
+  background-color: var(--clr-purple);
+  }
+  .item-6 {
+  background-color: var(--clr-orange);}
+
