--- a/Lab5/portfolio.css
+++ b/Lab5/portfolio.css
@@ -1,5 +1,8 @@
-*{background-color: rgb(255, 127, 165);padding-left: 5px; margin-left: 0px;}
-header {font-family: Arial, Helvetica, sans-serif;color: rgb(182, 41, 119); text-shadow: 5px;font-size: larger; border: 
+*{background-color: rgb(226, 128, 157);padding-left: 5px; margin-left: 0px;}
+header {font-family: Arial, Helvetica, sans-serif;
+  color: rgb(182, 41, 119);
+   font-size: larger; 
+   border:5px soild black;
 }
 main {text-decoration: dotted;position: fixed; display: flexbox;}
 footer {font-size: smaller; border: 10px; display: contents;}
