--- a/Lab5/portfolio.css
+++ b/Lab5/portfolio.css
@@ -2,7 +2,10 @@
 header {font-family: Arial, Helvetica, sans-serif;
   color: rgb(182, 41, 119);
    font-size: larger; 
-   border:5px soild black;
+
 }
-main {text-decoration: dotted;position: fixed; display: flexbox;}
+main {text-d;}
 footer {font-size: smaller; border: 10px; display: contents;}
+h1 {
+  border: 1px dotted rgb(241, 239, 239);
+}
