--- a/Lab5/portfolio.css
+++ b/Lab5/portfolio.css
@@ -1,5 +1,9 @@
 *{background-color: rgba(255, 184, 184, 0.911);padding-left: 5px; margin-left: 2px;}
 h1{border: 5px dashed wheat; text-align: center; font-style: oblique; color: brown; 
 }
+h2{text-align: center;font-style: initial; color:brown; font-size: x-large;
+}
+nav{display: flexbox;}
+
 
 
