--- a/Homework/skylar75.hw6.css
+++ b/Homework/skylar75.hw6.css
@@ -2,7 +2,6 @@
   margin: 0px;
   box-sizing: content-box;
 }
-/* flex item */
 .grid-container {
   display: grid;
   grid-template-rows: repeat(3, 150px);
@@ -12,7 +11,7 @@
   .grid-item {
   width: 150px;
   height: 150px;
-  display: flex; /* tiny flexbox to center text */
+  display: flex; 
   justify-content: center;
   align-items: center;
   border-radius: 10px;
@@ -22,20 +21,13 @@
   font-size: 2rem;
   }
   .item-1 {
-  background-color: var(--clr-pink);
+  background-color:aquamarine
   }
   .item-2 {
-  background-color: var(--clr-green);
+  background-color:wheat
   }
   .item-3 {
-  background-color: var(--clr-yellow);
+  background-color: yellowgreen
   }
-  .item-4 {
-  background-color: var(--clr-sky);
-  }
-  .item-5 {
-  background-color: var(--clr-purple);
-  }
-  .item-6 {
-  background-color: var(--clr-orange);}
+
 
